5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1643_2704.log
== TEST (2019-04-07 23:20:36) 
-- CODE:
nota = float(input("nota do aluno"))
bonus = nota*(110/10)

if  (nota >= 5):
     print(bonus)
		print("S")
		
else:
	print(nota)
	print("N")
-- ERROR:
File "XXXX", line 6
    print("S")
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 23:22:44) 
-- CODE:
nota = float(input("nota do aluno"))
oi = input("bonus")
bonus = nota*(110/10)

if  (oi == "S"):
     print(bonus)
		
else:
	print(nota)
	print("N")
-- OUTPUT:
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 23:22:56) 
-- CODE:
nota = float(input("nota do aluno"))
oi = input("bonus")
bonus = nota*(110/10)

if  (oi == "S"):
     print(bonus)
		
else:
	print(nota)
	
-- OUTPUT:
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 23:23:24) 
-- CODE:
nota = float(input("nota do aluno"))
oi = input("bonus")
bonus = nota*(110/100)

if  (oi == "S"):
     print(bonus)
		
else:
	print(nota)
	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 23:23:43) 
-- CODE:
nota = float(input("nota do aluno"))
oi = input("bonus")
bonus = nota*(110/100)

if  (oi == "S"):
     print(bonus)
		
else:
	print(nota)
	
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 23:24:10) 
-- CODE:
nota = float(input("nota do aluno"))
oi = input("bonus")
bonus = nota*(110/100)

if  (oi == "S"):
     print(bonus)
		
else:
	print(nota)
	
-- EXECUTION TIME:
0.140948
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
